--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import "@/styles/global.css";
-import ProjectTable from "@/components/ProjectTable";
+import ProjectList from "@/components/ProjectList";
+import BlogList from "@/components/BlogList";
 ---
 
 <html lang="en">
@@ -9,7 +10,7 @@ import ProjectTable from "@/components/ProjectTable";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>Evan Alvarez</title>
   </head>
   <body>
     <!-- this is the desktop section -->
@@ -23,7 +24,7 @@ import ProjectTable from "@/components/ProjectTable";
         <div
           class="col-span-1 row-span-1 flex justify-center rounded-lg bg-gray-200 shadow-md"
         >
-          <h2 class="pt-10 text-xl font-bold underline">Skills 🤹‍♂️</h2>
+          <h2 class="pt-10 text-xl font-bold underline">Links 🔗</h2>
         </div>
 
         <div
@@ -39,15 +40,16 @@ import ProjectTable from "@/components/ProjectTable";
         </div>
 
         <div
-          class="col-span-1 row-span-2 flex justify-center rounded-lg bg-gray-200 shadow-md"
+          class="col-span-1 row-span-2 flex flex-col items-center rounded-lg bg-gray-200 shadow-md"
         >
           <h2 class="pt-10 text-xl font-bold underline">Writings ✍️</h2>
+          <BlogList client:load />
         </div>
         <div
           class="col-span-1 row-span-1 flex flex-col items-center rounded-lg bg-gray-200 shadow-md"
         >
           <h2 class="pt-10 text-xl font-bold underline">Projects 💻</h2>
-          <ProjectTable />
+          <ProjectList />
         </div>
         <div
           class="col-span-2 row-span-1 flex items-center justify-center rounded-lg bg-gray-200 shadow-md"
