--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import "@/styles/global.css";
 import Topbar from "@/components/Topbar";
+import * as techPost from "@/pages/writings/what-tech-do-i-use.md";
 ---
 
 <html lang="en">
@@ -28,10 +29,26 @@ import Topbar from "@/components/Topbar";
           >
           <span class="text-2xl lg:text-3xl">::</span>
           <a
+            href="https://youtube.com/@sheikhevan0"
+            class="text-everforest-green text-sm lg:text-lg">youtube</a
+          >
+          <span class="text-2xl lg:text-3xl">::</span>
+          <a
             href="https://example.com"
             class="text-everforest-green text-sm lg:text-lg">resume</a
           >
         </div>
+      </div>
+      <div class="text-everforest-fg text-md pt-2 lg:text-lg">
+        Welcome to my small corner of the internet! I'm a programmer primarily
+        focused on web development based out of Austin, Texas. I am also
+        currently a senior at UTHS. On this page, I <a
+          class="text-everforest-green"
+          href="/writings">write</a
+        > about things I enjoy talking about. I am also a proud user of free (as
+        in freedom) software. You can read more about my operating system and development
+        environment <a class="text-everforest-green" href={techPost.url}>here</a
+        >.
       </div>
     </div>
   </body>
