--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import "@/styles/global.css";
 import Topbar from "@/components/Topbar";
+import GetLatestPosts from "@/components/GetLatestPosts";
 ---
 
 <html lang="en">
@@ -52,9 +53,10 @@ import Topbar from "@/components/Topbar";
         in freedom) software. You can read more about my operating system and development
         environment <a
           class="text-everforest-green hover:underline"
-          href="writings/what-tech-do-i-use">here</a
+          href="writings/what-tech-do-i-use-2025">here</a
         >.
       </div>
+      <GetLatestPosts />
     </div>
   </body>
 </html>
