--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,19 +23,19 @@ import GetLatestPosts from "@/components/GetLatestPosts";
             class="text-everforest-green text-sm hover:underline lg:text-lg"
             >email</a
           >
-          <span class="text-2xl lg:text-3xl">::</span>
+          <span class="text-xl lg:text-2xl">::</span>
           <a
             href="https://github.com/sheikhevan"
             class="text-everforest-green text-sm hover:underline lg:text-lg"
             >github</a
           >
-          <span class="text-2xl lg:text-3xl">::</span>
+          <span class="text-xl lg:text-2xl">::</span>
           <a
             href="https://youtube.com/@sheikhevan0"
             class="text-everforest-green text-sm hover:underline lg:text-lg"
             >youtube</a
           >
-          <span class="text-2xl lg:text-3xl">::</span>
+          <span class="text-xl lg:text-2xl">::</span>
           <a
             href="https://example.com"
             class="text-everforest-green text-sm hover:underline lg:text-lg"
@@ -54,9 +54,24 @@ import GetLatestPosts from "@/components/GetLatestPosts";
         environment <a
           class="text-everforest-green hover:underline"
           href="writings/what-tech-do-i-use-2025">here</a
-        >.
+        >. Also, thanks to <a
+          class="text-everforest-green hover:underline"
+          href="https://spacetime.dev">spacetime.dev</a
+        > for inspiration on this site's design.
       </div>
-      <GetLatestPosts />
+      <div class="text-everforest-fg text-md pt-2 lg:text-lg">
+        <h1 class="pt-[3rem] text-3xl">recent posts</h1>
+        <a href="/writings">all posts</a>
+        <span class="text-xl lg:text-2xl">::</span>
+        <a href="/writings">subscribe</a>
+        <GetLatestPosts />
+      </div>
+      <div class="text-everforest-fg text-md pt-2 lg:text-lg">
+        <h1 class="pt-[3rem] text-3xl">projects</h1>
+        <a href="/projects">all projects</a>
+        <span class="text-xl lg:text-2xl">::</span>
+        <a href="https://github.com/sheikhevan/">github</a>
+      </div>
     </div>
   </body>
 </html>
