added my pgp key

--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -2,7 +2,7 @@
 import "@/styles/global.css";
 import "@/styles/post.css";
 import Topbar from "@/components/Topbar";
-const { frontmatter } = Astro.props;
+const { frontmatter, signature } = Astro.props;
 ---
 
 <html>
