--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,6 +25,11 @@ import GetLatestPosts from "@/components/GetLatestPosts";
           >
           <span class="text-xl lg:text-2xl">::</span>
           <a
+            class="text-everforest-green text-sm hover:underline lg:text-lg"
+            href="/gpg/pubkey.asc">pgp</a
+          >
+          <span class="text-xl lg:text-2xl">::</span>
+          <a
             href="https://github.com/sheikhevan"
             class="text-everforest-green text-sm hover:underline lg:text-lg"
             >github</a
