added the resume stuff

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ import GetLatestPosts from "@/components/GetLatestPosts";
           >
           <span class="text-xl lg:text-2xl">::</span>
           <a
-            href="https://example.com"
+            href="/resume/resume.pdf"
             class="text-everforest-green text-sm hover:underline lg:text-lg"
             >resume</a
           >
