the favicon is important man

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,11 @@ import GetLatestPosts from "@/components/GetLatestPosts";
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://fav.farm/%F0%9F%A7%91%E2%80%8D%F0%9F%92%BB"
+    />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>home :: evanalvarez.dev</title>
