added the boring SEO stuff

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,6 +14,9 @@ import GetLatestPosts from "@/components/GetLatestPosts";
     />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+    <meta name="author" content="Evan Alvarez" />
+    <meta name="description" content="Evan Alvarez's Corner of the Internet" />
+    <meta name="keywords" content="Programming, Coding, Blog" />
     <title>home :: evanalvarez.dev</title>
   </head>
   <body class="bg-everforest-bgdim">
