--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -13,6 +13,9 @@ import Topbar from "@/components/Topbar";
     />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+    <meta name="author" content="Evan Alvarez" />
+    <meta name="description" content="Evan Alvarez's Corner of the Internet" />
+    <meta name="keywords" content="Programming, Coding, Blog" />
     <title>projects :: evanalvarez.dev</title>
   </head>
   <body class="bg-everforest-bgdim">
