--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -84,6 +84,19 @@ import GetLatestPosts from "@/components/GetLatestPosts";
         <span class="text-xl lg:text-2xl">::</span>
         <a href="https://github.com/sheikhevan/">github</a>
       </div>
+      <div class="text-everforest-fg text-md pt-2 lg:text-lg">
+        <h1 class="pt-[3rem] text-3xl">cryptography</h1>
+        <a
+          class="text-everforest-green text-sm hover:underline lg:text-lg"
+          href="/gpg/pubkey.asc">pgp</a
+        >
+        <span class="text-xl lg:text-2xl">::</span>
+        <a href="/gpg/fingerprint">fingerprint</a>
+        <p class="text-md text-everforest-fg pt-2 lg:text-lg">
+          All posts on this website are cryptographically signed using PGP for
+          verifying their authenticity.
+        </p>
+      </div>
     </div>
   </body>
 </html>
