--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -79,12 +79,6 @@ import GetLatestPosts from "@/components/GetLatestPosts";
         <GetLatestPosts />
       </div>
       <div class="text-everforest-fg text-md pt-2 lg:text-lg">
-        <h1 class="pt-[3rem] text-3xl">projects</h1>
-        <a href="/projects">all projects</a>
-        <span class="text-xl lg:text-2xl">::</span>
-        <a href="https://github.com/sheikhevan/">github</a>
-      </div>
-      <div class="text-everforest-fg text-md pt-2 lg:text-lg">
         <h1 class="pt-[3rem] text-3xl">cryptography</h1>
         <a
           class="text-everforest-green text-sm hover:underline lg:text-lg"
@@ -94,8 +88,14 @@ import GetLatestPosts from "@/components/GetLatestPosts";
         <a href="/gpg/fingerprint">fingerprint</a>
         <p class="text-md text-everforest-fg pt-2 lg:text-lg">
           All posts on this website are cryptographically signed using PGP for
-          verifying their authenticity.
+          verification of their authenticity.
         </p>
+      </div>
+      <div class="text-everforest-fg text-md pt-2 lg:text-lg">
+        <h1 class="pt-[3rem] text-3xl">projects</h1>
+        <a href="/projects">all projects</a>
+        <span class="text-xl lg:text-2xl">::</span>
+        <a href="https://github.com/sheikhevan/">github</a>
       </div>
     </div>
   </body>
