--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -4,7 +4,7 @@ import "@/styles/post.css";
 import Topbar from "@/components/Topbar";
 const { frontmatter } = Astro.props;
 
-const slug = Astro.url.pathname.split("/").pop();
+const slug = Astro.url.pathname.split("/").filter(Boolean).pop();
 ---
 
 <html>
