finished the rss support

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -75,7 +75,7 @@ import GetLatestPosts from "@/components/GetLatestPosts";
         <h1 class="pt-[3rem] text-3xl">recent posts</h1>
         <a href="/writings">all posts</a>
         <span class="text-xl lg:text-2xl">::</span>
-        <a href="/writings">subscribe</a>
+        <a href="/rss.xml">subscribe</a>
         <GetLatestPosts />
       </div>
       <div class="text-everforest-fg text-md pt-2 lg:text-lg">
