--- a/src/pages/writings/index.astro
+++ b/src/pages/writings/index.astro
@@ -26,7 +26,7 @@ import GetAllPosts from "@/components/GetAllPosts";
         <div class="text-everforest-fg pt-[5rem] text-3xl lg:text-5xl">
           <h1 class="font-alegreya font-bold">writings</h1>
           <a
-            href="/writings"
+            href="/rss.xml"
             class="text-everforest-green text-sm hover:underline lg:text-lg"
             >subscribe</a
           >
