added source code notifier

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -94,7 +94,10 @@ import GetLatestPosts from "@/components/GetLatestPosts";
         <a href="/gpg/fingerprint">fingerprint</a>
         <p class="text-md text-everforest-fg pt-2 lg:text-lg">
           All posts on this website are cryptographically signed using PGP for
-          verification of their authenticity.
+          verification of their authenticity. This site is also fully open
+          source, it's source code can be found <a
+            href="https://github.com/sheikhevan/site">here</a
+          >.
         </p>
       </div>
       <div class="text-everforest-fg text-md pt-2 lg:text-lg">
