--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -18,6 +18,7 @@ const topics = frontmatter.topics;
       type="image/svg+xml"
       href="https://fav.farm/%F0%9F%A7%91%E2%80%8D%F0%9F%92%BB"
     />
+    <link rel="sitemap" href="/sitemap-index.xml" />
     <meta name="author" content="Evan Alvarez" />
     <meta name="description" content="Evan Alvarez's Corner of the Internet" />
     <meta name="keywords" content="Programming, Coding, Blog" />
@@ -33,7 +34,15 @@ const topics = frontmatter.topics;
           </h1>
           <p class="mt-2">{frontmatter.description}</p>
           <p>By: {frontmatter.author}</p>
-          <p>Topics: {topics.map((topic) => <a class="px-1" href=`/writings/topic/${topic}`>#{topic}</a>)}</p>
+          <p>
+            Topics: {
+              topics.map((topic) => (
+                <a class="px-1" href="/writings/topic/{topic}">
+                  \#{topic}
+                </a>
+              ))
+            }
+          </p>
           <p>{frontmatter.date}</p>
           <slot />
           <footer>
