--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,7 @@ import GetLatestPosts from "@/components/GetLatestPosts";
       title="evan's writings"
       href={new URL("rss.xml", Astro.site)}
     />
+    <link rel="sitemap" href="/sitemap-index.xml" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta name="author" content="Evan Alvarez" />
@@ -63,7 +64,7 @@ import GetLatestPosts from "@/components/GetLatestPosts";
       </div>
       <div class="text-everforest-fg text-md pt-2 lg:text-lg">
         Welcome to my small corner of the internet! I'm a programmer primarily
-        focused on web development based out of Austin, Texas. I am also
+        focused on the Rust ecosystem based out of Austin, Texas. I am also
         currently a senior at UTHS. On this page, I <a
           class="text-everforest-green hover:underline"
           href="/writings">write</a
