--- a/src/pages/writings/topic/[topic].astro
+++ b/src/pages/writings/topic/[topic].astro
@@ -35,6 +35,7 @@ const filteredPosts = posts.filter((post: any) =>
       title="evan's writings"
       href={new URL("rss.xml", Astro.site)}
     />
+    <link rel="sitemap" href="/sitemap-index.xml" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta name="author" content="Evan Alvarez" />
