im using a local svg now instead of fav.farm

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import GetLatestPosts from "@/components/GetLatestPosts";
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://fav.farm/%F0%9F%A7%91%E2%80%8D%F0%9F%92%BB"
+      href="/favicon.svg"
     />
     <link
       rel="alternate"
