--- a/src/pages/writings/index.astro
+++ b/src/pages/writings/index.astro
@@ -10,7 +10,7 @@ import GetAllPosts from "@/components/GetAllPosts";
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://fav.farm/%F0%9F%A7%91%E2%80%8D%F0%9F%92%BB"
+      href="/favicon.svg"
     />
     <link
       rel="alternate"
