--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -16,7 +16,7 @@ const topics = frontmatter.topics;
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://fav.farm/%F0%9F%A7%91%E2%80%8D%F0%9F%92%BB"
+      href="/favicon.svg"
     />
     <link rel="sitemap" href="/sitemap-index.xml" />
     <meta name="author" content="Evan Alvarez" />
