--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -10,7 +10,7 @@ import GetAllProjects from "@/components/GetAllProjects";
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://fav.farm/%F0%9F%A7%91%E2%80%8D%F0%9F%92%BB"
+      href="/favicon.svg"
     />
     <link rel="sitemap" href="/sitemap-index.xml" />
     <meta name="viewport" content="width=device-width" />
