--- a/src/pages/writings/topic/[topic].astro
+++ b/src/pages/writings/topic/[topic].astro
@@ -29,7 +29,7 @@ const filteredPosts = posts.filter((post: any) =>
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://fav.farm/%F0%9F%A7%91%E2%80%8D%F0%9F%92%BB"
+      href="/favicon.svg"
     />
     <link
       rel="alternate"
